# cppGameFrame

./: ProjectHome.md  README.md
 my-simple-code/src/: .cproject  .project  CMakeLists.txt
 my-simple-code/src/apps/dbsrv/proto/: addressbook.proto  game.proto  test.proto
 my-simple-code/src/apps/dbsrv/scripts/: bench.lua  client.lua  mod_test.lua  modulemanager.lua  server.lua  test.lua  test1.lua  test2.lua  test3.lua  test4.lua  test5.lua  test6.lua  test7.lua
 my-simple-code/src/apps/dbsrv/tools/: dblogfile  dbsrv.sh  logfile
 my-simple-code/src/cmake_modules/: FindLUA.cmake  FindMYSQL.cmake  FindPROTOBUF.cmake  FindREDIS.cmake
 my-simple-code/src/game/: CMakeLists.txt
 my-simple-code/src/game/LogSrv/: LogSrv.cc  LogSrv.h
 my-simple-code/src/game/LoongBgSrv/: Battleground.cc  Battleground.h  BattlegroundMgr.cc  BattlegroundMgr.h  BattlegroundState.cc  BattlegroundState.h  BgBuilding.cc  BgBuilding.h  BgFlower.cc  BgFlower.h  BgPlayer.cc  BgPlayer.h  BgPlayerMgr.cc  BgPlayerMgr.h  BgUnit.cc  BgUnit.h  CMakeLists.txt  ErrorCode.h  Hotel.cc  Hotel.h  JoinTimesMgr.cc  JoinTimesMgr.h  LoongBgSrv.cc  LoongBgSrv.h  Player.cc  Player.h  Player.h.bak  PlayerMgr.cc  PlayerMgr.h  StateBattlegroundCountDown.cc  StateBattlegroundCountDown.h  StateBattlegroundExit.cc  StateBattlegroundExit.h  StateBattlegroundRun.cc  StateBattlegroundRun.h  StateBattlegroundStart.cc  StateBattlegroundStart.h  StateBattlegroundWait.cc  StateBattlegroundWait.h  Util.h  (+3 more)
 my-simple-code/src/game/LoongBgSrv/base/: Base.cc  Base.h  BufBase.cc  BufBase.h  BufBaseMgr.cc  BufBaseMgr.h  ColonBuf.h  ItemBase.cc  ItemBase.h  ItemBaseMgr.cc  ItemBaseMgr.h  MapInfoBase.cc  MapInfoBase.h  PetBase.cc  PetBase.h  PetBaseMgr.cc  PetBaseMgr.h  SkillBase.cc  SkillBase.h  SkillBaseMgr.cc  SkillBaseMgr.h
 my-simple-code/src/game/LoongBgSrv/config/: ConfigMgr.h  def.conf  prod.conf
 my-simple-code/src/game/LoongBgSrv/package/: Item.cc  Item.h  Package.cc  Package.h
 my-simple-code/src/game/LoongBgSrv/pet/: Pet.cc  Pet.h
 my-simple-code/src/game/LoongBgSrv/php/: htmlclient.cpp  htmlclient.h
 my-simple-code/src/game/LoongBgSrv/protocol/: GMProtocol.h  GameProtocol.h
 my-simple-code/src/game/LoongBgSrv/scene/: DropItemMgr.cc  DropItemMgr.h  FlowerMgr.cc  FlowerMgr.h  Scene.cc  Scene.h
 my-simple-code/src/game/LoongBgSrv/skill/: AddSpeedBuf.cc  AddSpeedBuf.h  Buf.cc  Buf.h  BufHandler.cc  BufHandler.h  HunXuanBuf.cc  HunXuanBuf.h  ItemHandler.cc  ItemHandler.h  MianYiBuf.cc  MianYiBuf.h  SkillHandler.cc  SkillHandler.h  ZhouShangBuf.cc  ZhouShangBuf.h
 my-simple-code/src/game/LoongBgSrv/test/: TestLoongBgSrv.cc
 my-simple-code/src/game/LoongBgSrv/tests/: BgClientData.cc  BgClientData.h  BgClientDataMgr.cc  BgClientDataMgr.h  CMakeLists.txt  LoongBgClient.cc  LoongBgClient.h  LoongBgSrvBenchmark.cc  StaticData.h  TestBen.cc  TestLoongBgSrv.cc
 my-simple-code/src/game/LoongBgSrv/util/: md5.cpp  md5.h
 my-simple-code/src/game/bosssrv/: BossHurtMgr.cc  BossHurtMgr.h  BossSrv.cc  BossSrv.h  CMakeLists.txt  main.cc  version.h
 my-simple-code/src/game/bosssrv/config/: ConfigMgr.h  def.conf  prod.conf
 my-simple-code/src/game/bosssrv/php/: htmlclient.cpp  urlEncode.h
 my-simple-code/src/game/bosssrv/protocol/: GameProtocol.h
 my-simple-code/src/game/bosssrv/tests/: CMakeLists.txt  Client.cc  Client.h  main.cc
 my-simple-code/src/game/dataServer/server/: DataServer.cc  DataServer.h  dataServer.pb.cc  dataServer.pb.h  dataServer.proto
 my-simple-code/src/game/dbsrv/: CMakeLists.txt  DBSrv.cc  DBSrv.h  LogThread.cc  LogThread.h  PBSql.cc  PBSql.h  ProtoImporter.cc  ProtoImporter.h  README  SrvStateInfo.cc  SrvStateInfo.h  Util.cc  Util.h  WorkerThread.cc  WorkerThread.h  WorkerThreadPool.cc  WorkerThreadPool.h  WriterThread.cc  WriterThread.h  WriterThreadPool.cc  WriterThreadPool.h  dispatcher.h  main.cc  msg.pb.cc  msg.pb.h  msg.proto  version.h
 my-simple-code/src/game/dbsrv/cache/: rcache.cc  rcache.h
 my-simple-code/src/game/dbsrv/codec/: codec.cc  codec.h
 my-simple-code/src/game/dbsrv/lua/: LuaBind.h  LuaEngine.cc  LuaEngine.h  LuaLog.cc  LuaLog.h  LuaMyLibs.cc  LuaMyLibs.h  LuaMySql.cc  LuaMySql.h  LuaPB.cc  LuaPB.h  LuaRedis.cc  LuaRedis.h  LuaSendPB.cc  LuaSendPB.h  LuaWK.cc  LuaWK.h  example.cc
 my-simple-code/src/game/dbsrv/mysql/: Field.cc  Field.h  MySQLConnection.cc  MySQLConnection.h  MySQLConnectionInfo.h  QueryResult.cc  QueryResult.h
 my-simple-code/src/game/dbsrv/proto/: test.proto
 my-simple-code/src/game/dbsrv/scripts/: test.lua
 my-simple-code/src/game/dbsrv/tests/: CMakeLists.txt  ClientThread.cc  ClientThread.h  DBClient.cc  DBClient.h  DBLuaClient.cc  (+9 more)
 my-simple-code/src/game/kabu_codec/: LuaPB.cc  LuaPB.h  Makefile  ProtoImporter.h  codec.cc  codec.h  luacodec.cc  luacodec.h
 my-simple-code/src/game/luaevent/: Makefile  luabufferevent.c  luaevent.lua  luaeventbase.c
 my-simple-code/src/game/xmlSrv/: CMakeLists.txt  XmlSrv.cc  XmlSrv.h  main.cc
 my-simple-code/src/mysdk/: CMakeLists.txt
 my-simple-code/src/mysdk/base/: Array.h  Atomic.h  AtomicPtrT.h  BlockingQueue.h  CMakeLists.txt  Common.cc  Common.h  Condition.h  Daemon.h  Date.cc  Date.h  Logging.cc  Logging.h  Mutex.h  MyFile.cc  MyFile.h  PerformanceCounter.cc  PerformanceCounter.h  Singleton.h  SysInfo.cc  SysInfo.h  Thread.cc  Thread.h  Timestamp.cc  Timestamp.h  YPipeT.h  YQueueT.h  strutil.h
 my-simple-code/src/mysdk/config/: CMakeLists.txt  Config.cc  Config.h
 my-simple-code/src/mysdk/database/: CMakeLists.txt
 my-simple-code/src/mysdk/exconfig/: CMakeLists.txt  Config.cpp  Config.h  def.conf  test.cc
 my-simple-code/src/mysdk/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Connector.cc  Connector.h  EventLoop.cc  EventLoop.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Session.cc  Session.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
 my-simple-code/src/mysdk/protocol/: CMakeLists.txt
(+102 files in other folders)
